--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   path_provider: ^2.1.5
   file_picker: ^10.3.8
   share_plus: ^12.0.1
-  intl: ^0.20.2
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
   shared_preferences: ^2.5.4
@@ -49,7 +48,12 @@ dependencies:
   lucide_icons: ^0.257.0
   supabase_flutter: ^2.12.0
   flutter_dotenv: ^6.0.0
-  http: ^1.6.0
+  dio: ^5.9.0
+  go_router: ^17.0.1
+  flutter_svg: ^2.2.3
+  easy_localization: ^3.0.8
+  easy_localization_loader: ^2.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +84,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/images/
+    - assets/translations/
+
+  fonts:
+    - family: Oxanium
+      fonts:
+        - asset: assets/fonts/Oxanium-VariableFont_wght.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
