--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Create Android secrets
         run: |
-          cat > android/secrets.properties <<'EOF'
+          cat > android/local.properties <<'EOF'
           MAPS_API_KEY=${{ secrets.MAPS_API_KEY }}
           EOF
 
