--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   easy_localization_loader: ^2.0.2
   email_validator: ^3.0.0
   google_maps_flutter: ^2.14.0
+  geolocator: ^14.0.2
+  permission_handler: ^12.0.1
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
