--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   geolocator: ^14.0.2
   permission_handler: ^12.0.1
   fl_chart: ^1.1.1
+  flutter_blue_plus: ^2.1.1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
